@@ -7,6 +7,8 @@
 
 	* polynomial/polyfit.m: Modified tests to respect a relative tolerance.
 
+	* plot/print.m: Accept a figure handle as an optional input.
+ 
 2008-02-29  John W. Eaton  <jwe@octave.org>
 
 	* plot/print.m: Handle gif and jpg devices.
